# titanix

./: .envrc  .gitignore  CACHIX-SETUP.md  Cargo.toml  README.md  VERSIONING.md  flake.nix  rust-analyzer.toml
.github/workflows/: auto-release.yml  ci.yml  release-unix.yml  release-windows.yml
src/: main.rs
